# QR-Code-Maker

./: .gitignore  Makefile  README.md  build.bat  build.py  demo.csv  pyproject.toml
src/: main.py  qr_code_maker.py
tests/: __init__.py  test_gui.py  test_qr_code_maker.py
